Refactor DirectX and OpenGL rendering pipelines
Refactored DirectX rendering in `Source.cpp` to use encapsulated `GAPI` objects, improving safety and maintainability. Replaced procedural OpenGL code in `source.cpp` with an object-oriented approach using the new `GRAPIOpenGL` class.

Introduced `GRAPIOpenGL` to encapsulate OpenGL initialization, rendering, and cleanup. Moved shader source code to `GRAPIOpenGL.cpp` as static members. Added GLFW and GLEW initialization methods and scene setup logic.

Updated `openGl.vcxproj` and `openGl.vcxproj.filters` to include `GRAPIOpenGL.cpp` and `GRAPIOpenGL.h`. Improved code readability, reduced redundancy, and ensured proper resource management with smart pointers.

--- a/openGl/openGl.vcxproj
+++ b/openGl/openGl.vcxproj
@@ -259,11 +259,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="GRAPIOpenGL.cpp" />
     <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="source.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="GRAPIOpenGL.h" />
     <ClInclude Include="Math.cpp" />
     <ClInclude Include="Mesh.h" />
     <ClInclude Include="Shader.h" />
