--- a/openGl/openGl.vcxproj.filters
+++ b/openGl/openGl.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="Mesh.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="GRAPIOpenGL.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Shader.h">
@@ -34,6 +37,9 @@
     </ClInclude>
     <ClInclude Include="Math.cpp">
       <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GRAPIOpenGL.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
