Enable OpenGL and DirectX11 build configuration
Added OPENGL and DIRECTX11 preprocessor definitions to the DirectX11 build config in openGl.vcxproj, allowing compilation for both APIs. Updated source.cpp to conditionally compile the OpenGL main entry point and changed the window title to "Cube OPENGL". Fixed a minor formatting issue in GRAPIOpenGL.h.

--- a/openGl/openGl.vcxproj
+++ b/openGl/openGl.vcxproj
@@ -215,7 +215,7 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_DEBUG;_CONSOLE;OPENGL;DIRECTX11;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>D:\DEV\Devlibs\GLEW-2.2.0\include;D:\DEV\Devlibs\GLFW\include;D:\DEV\Devlibs\GLEW\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
