Refactor depth stencil handling and resource paths
Renamed and refactored DepthStencil-related files and interfaces for consistency, introducing a FORMAT enum for depth formats. Updated resource and shader paths to new locations under Resources/RawData, and adjusted project files and includes accordingly. The depth stencil creation now requires an explicit format, and related code in Source.cpp and DX11GRAPI was updated to match the new API.

--- a/Tutorial7Base/Tutorial7Base.vcxproj
+++ b/Tutorial7Base/Tutorial7Base.vcxproj
@@ -254,20 +254,21 @@
     <ClInclude Include="Basebuffers.h" />
     <ClInclude Include="CommandBuffer.h" />
     <ClInclude Include="ConstantBuffer.h" />
-    <ClInclude Include="DepthStecil.h" />
+    <ClInclude Include="DepthStencil.h" />
     <ClInclude Include="DepthStencilView.h" />
     <ClInclude Include="Dx11CommandBuffer.h" />
     <ClInclude Include="Dx11DepthStecil.h" />
-    <ClInclude Include="Dx11DepthStecilView.h" />
+    <ClInclude Include="Dx11DepthStencilView.h" />
     <ClInclude Include="DX11GRAPI.h" />
     <ClInclude Include="Dx11PixelShader.h" />
     <ClInclude Include="Dx11SwapChain.h" />
     <ClInclude Include="Dx11Topology.h" />
     <ClInclude Include="Dx11VertexShader.h" />
     <ClInclude Include="Dx11ConstantBuffer.h" />
-    <ClInclude Include="Dx11indexBuffer.h" />
+    <ClInclude Include="Dx11IndexBuffer.h" />
     <ClInclude Include="Dx11VertexBuffer.h" />
     <ClInclude Include="GRAPI.h" />
+    <ClInclude Include="GRAPIGenerals.h" />
     <ClInclude Include="Indexbuffer.h" />
     <ClInclude Include="ObjLoader.h" />
     <ClInclude Include="Pass.h" />
