Add default ctors for Dx11 wrappers, init pointers to nullptr
Added default constructors to Dx11 wrapper classes (DepthStencil, IndexBuffer, PixelShader, SwapChain, VertexBuffer, VertexShader) to initialize internal DirectX resource pointers to nullptr. Created corresponding .cpp files for these constructors. Updated project files to include new sources and added necessary DirectX header includes. This ensures all resource pointers are safely initialized, improving code robustness.

--- a/Tutorial7Base/Tutorial7Base.vcxproj
+++ b/Tutorial7Base/Tutorial7Base.vcxproj
@@ -239,8 +239,14 @@
     <ClCompile Include="ContainerFiles.h" />
     <ClCompile Include="Dx11CommandBuffer.cpp" />
     <ClCompile Include="Dx11ConstantBuffer.cpp" />
+    <ClCompile Include="Dx11DepthStecil.cpp" />
     <ClCompile Include="DX11GRAPI.cpp" />
+    <ClCompile Include="Dx11IndexBuffer.cpp" />
+    <ClCompile Include="Dx11PixelShader.cpp" />
+    <ClCompile Include="Dx11SwapChain.cpp" />
     <ClCompile Include="Dx11Topology.cpp" />
+    <ClCompile Include="Dx11VertexBuffer.cpp" />
+    <ClCompile Include="Dx11VertexShader.cpp" />
     <ClCompile Include="GRAPI.cpp" />
     <ClCompile Include="ObjLoader.cpp" />
     <ClCompile Include="Pass.cpp" />
