Refactor DX11 API: unify formats, manage back buffer views
Refactored graphics API to use GAPI_FORMAT and GAPI_BIND_FLAGS, replacing the old FORMAT namespace. Centralized depth-stencil and render target creation and management in Dx11GraphicsAPI, introducing m_backBufferRT and m_backBufferDS members. Added helper functions for format and bind flag mapping, and refactored texture creation logic. Updated initialization, cleanup, and rendering code to use new API. Introduced Dx11DepthStencilView class and updated project files to include it.

--- a/Tutorial7Base/Tutorial7Base.vcxproj
+++ b/Tutorial7Base/Tutorial7Base.vcxproj
@@ -240,6 +240,7 @@
     <ClCompile Include="Dx11CommandBuffer.cpp" />
     <ClCompile Include="Dx11ConstantBuffer.cpp" />
     <ClCompile Include="Dx11DepthStecil.cpp" />
+    <ClCompile Include="Dx11DepthStencilView.cpp" />
     <ClCompile Include="DX11GRAPI.cpp" />
     <ClCompile Include="Dx11IndexBuffer.cpp" />
     <ClCompile Include="Dx11PixelShader.cpp" />
