--- a/Tutorial7Base/Tutorial7Base.vcxproj.filters
+++ b/Tutorial7Base/Tutorial7Base.vcxproj.filters
@@ -90,6 +90,9 @@
     <ClCompile Include="VertexShader.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Dx11ViewPort.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Resource.h">
@@ -171,6 +174,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="GRAPIGenerals.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ViewPort.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Dx11ViewPort.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
